2015-02-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick.c (InitializeMagick): Invoke
	NTInitializeExceptionHandlers() under Windows.

	* magick/nt_base.c (NTInitializeExceptionHandlers): Add a new
	private function which disables pop-up Windows on exceptions and
	registers a handler for Windows exceptions to clean up temporary
	files prior to program exit.

	* magick/magick.c (PanicDestroyMagick): Use
	PurgeTemporaryFilesAsyncSafe() rather than PurgeTemporaryFiles().
	(InitializeMagickSignalHandlers): Always register for SIGINT, even
	under Microsoft Windows.

	* magick/tempfile.c (PurgeTemporaryFilesAsyncSafe): New private
	function to clean up temporary files prior to program exit.
	Async-safe so it can be safely called from a signal handler.
	Intentionally leaks memory.

2015-02-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c (GenerateEXIFAttribute): Fix crash while
	parsing corrupt EXIF which was reported by Stijn Sanders on
	2015-02-17.

	* Magick++/lib/{Blob.cpp, Image.cpp}: Incorrect lock scope
	resulted in Magick++ locking not actually working to protect
	critical sections in spite of no detected problems with locking
	these past 16 years.  Problem was detected using the
	misc-unused-raii check from clang-tidy and was reported by Hyrum
	Wright.

	* coders/palm.c (ReadPALMImage): Add header logging to writer.
	Writer still seeks and overwrites its own header so logging is not
	entirely accurate yet.

2015-02-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* libtool: Update GNU libtool to 2.4.6.

	* coders/palm.c (ReadPALMImage): Fix support for transparency in
	PALM reader.

2015-02-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/palm.c (ReadPALMImage): Major re-work of PALM reader.
	More log message improvements.  More header validation.

2015-02-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/palm.c (ReadPALMImage): Improve log messages.  Add more