@@ -81,7 +81,7 @@ BSC32=bscmake.exe
 # ADD BSC32 /nologo
 LINK32=link.exe
 # ADD BASE LINK32 /nologo /subsystem:windows /debug /machine:I386 /pdbtype:sept
-# ADD LINK32 rpcrt4.lib /nologo /subsystem:windows /debug /machine:I386 /out:"configure.exe" /pdbtype:sept
+# ADD LINK32 rpcrt4.lib /nologo /subsystem:windows /debug /machine:I386 /out:"configure_d.exe" /pdbtype:sept
 
 !ENDIF 
 
